--- a/src/components/MainPage.scss
+++ b/src/components/MainPage.scss
@@ -7,21 +7,21 @@
     columns: 2;
 }
 
-.submit_button {
-    background-color: #44aee3;
-    border: 1px solid #44aee3;
-    border-radius: 10px;
-    color: white;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    width: 100%;
-    font-size: 16px;
-    cursor: pointer;
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: block;
-}
+// .submit_button {
+//     background-color: #44aee3;
+//     border: 1px solid #44aee3;
+//     border-radius: 10px;
+//     color: white;
+//     padding-top: 16px;
+//     padding-bottom: 16px;
+//     width: 100%;
+//     font-size: 16px;
+//     cursor: pointer;
+//     text-align: center;
+//     margin-top: 10px;
+//     margin-bottom: 10px;
+//     display: block;
+// }
 
 .input_amount {
     margin-top: 10px;
@@ -30,5 +30,4 @@
 
 .parent {
     width: auto;
-    margin: 0.4rem;
 }
