--- a/src/components/MainPage.scss
+++ b/src/components/MainPage.scss
@@ -1,33 +1,9 @@
-.img {
-    width: 200px;
-    height: auto;
-}
-
-.container {
-    columns: 2;
-}
-
-// .submit_button {
-//     background-color: #44aee3;
-//     border: 1px solid #44aee3;
-//     border-radius: 10px;
-//     color: white;
-//     padding-top: 16px;
-//     padding-bottom: 16px;
-//     width: 100%;
-//     font-size: 16px;
-//     cursor: pointer;
-//     text-align: center;
-//     margin-top: 10px;
-//     margin-bottom: 10px;
-//     display: block;
-// }
-
-.input_amount {
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
 .parent {
     width: auto;
+}
+
+.line {
+    width: auto;
+    height: 0.3rem;
+    background-color: #f5f5f5;
 }
