feature: sidebar space area is added

--- a/src/components/MainPage.scss
+++ b/src/components/MainPage.scss
@@ -1,4 +1,21 @@
 .parent {
     width: auto;
+    // align-content: center;
+
+    // @media (max-width: 680px) {
+    //     width: auto;
+    //     padding-left: 0px;
+    //     padding-right: 0px;
+    // }
 }
 
+#main {
+    width: 800px;
+    float: left;
+
+    @media (max-width: 680px) {
+        width: auto;
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+}
