--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,5 +1,7 @@
 .line {
     width: auto;
-    height: 0.3rem;
-    background-color: #f5f5f5;
+    height: 0.15rem;
+    background-color: #d8d8d8;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
